# roccat-tools-leadr

./: .gitignore  CMakeLists.txt  README  roccat.spec  setup.sh
leadr/: CMakeLists.txt  leadr_dbus_services.xml
leadr/libleadreventhandler/: CMakeLists.txt  leadr_dbus_server.c  leadr_dbus_server.h  leadr_eventhandler.c  leadr_eventhandler_channel.c  leadr_eventhandler_channel.h
leadr/libleadrgfxplugin/: CMakeLists.txt  leadrgfxplugin.c
leadr/libroccatleadr/: CMakeLists.txt  leadr.h  leadr_config.c  leadr_config.h  leadr_control_unit.c  leadr_control_unit.h  leadr_dbus_services.c  leadr_dbus_services.h  leadr_device.c  leadr_device.h  leadr_device_state.c  leadr_device_state.h  leadr_firmware.h  leadr_gfx.c  leadr_gfx.h  leadr_info.c  leadr_info.h  leadr_macro.c  leadr_macro.h  leadr_profile.c  leadr_profile.h  leadr_profile_buttons.c  leadr_profile_buttons.h  leadr_profile_settings.c  leadr_profile_settings.h  leadr_rmp.c  leadr_rmp.h  leadr_rmp_accessors.c  leadr_rmp_conversions.c  leadr_rmp_high_level.c  leadr_rmp_light_info.c  leadr_rmp_light_info.h  leadr_rmp_macro_key_info.c  leadr_rmp_macro_key_info.h  leadr_sensor.c  leadr_sensor.h  leadr_special.h  leadr_talk.c  leadr_talk.h  leadr_xcelerator.c  (+1 more)
leadr/roccatleadrconfig/: CMakeLists.txt  leadr_2d_positional.c  leadr_2d_positional.h  leadr_buttons_frame.c  leadr_buttons_frame.h  leadr_color_frame.c  leadr_color_frame.h  leadr_configuration_dialog.c  leadr_configuration_dialog.h  leadr_cpi_selector.c  leadr_cpi_selector.h  leadr_dcu_frame.c  leadr_dcu_frame.h  leadr_info_dialog.c  leadr_info_dialog.h  leadr_key_combo_box.c  leadr_key_combo_box.h  leadr_light_effects_frame.c  leadr_light_effects_frame.h  leadr_profile_page.c  leadr_profile_page.h  leadr_tcu_calibration_assistant.c  leadr_tcu_calibration_assistant.h  leadr_tcu_dcu_dialog.c  leadr_tcu_dcu_dialog.h  leadr_tcu_frame.c  leadr_tcu_frame.h  leadr_xcelerator_calibration_assistant.c  leadr_xcelerator_calibration_assistant.h  leadrconfig.c  leadrconfig_window.c  leadrconfig_window.h  roccatleadrconfig.desktop
leadr/roccatleadrcontrol/: CMakeLists.txt  leadrcontrol.c
leadr/roccatleadrcontrol/man/: CMakeLists.txt  roccatleadrcontrol.de.1  roccatleadrcontrol.en.1
libroccat/: CMakeLists.txt  roccat_talk.c  roccat_talk.h
libroccathelper/: gtk_roccat_helper.c  gtk_roccat_helper.h
libroccatwidget/: CMakeLists.txt  roccat_cpi_fixed_selector.c  roccat_handedness_selector.c  roccat_key_mask_selector.c  roccat_profile_page_tab_label.c  roccat_shortcut_dialog.c  roccat_single_cpi_selector.c  roccat_talk_target_combo_box.c  roccat_talk_target_combo_box.h  roccat_talkfx_selector.c  roccat_talkfx_selector.h
po/: de.po  en.po  roccat-tools.pot
scripts/: install_deps_arch  install_deps_fedora  install_deps_opensuse  install_deps_ubuntu  install_libgaminggear.sh
udev/: 90-roccat-leadr.rules
